feat: add debt payment handler
